Prevent content from jump because of hidden overlay
Closes #11.

--- a/css/main.css
+++ b/css/main.css
@@ -490,9 +490,6 @@ body {
   color: #111;
   text-align: center;
 }
-body.has-overlay {
-  overflow: hidden;
-}
 
 h2 {
   margin: 2em 0 .5em;
@@ -639,6 +636,14 @@ a:visited {
 /*
  * Configuration
  */
+html {
+  overflow-y: scroll;
+}
+
+.has-overlay > body {
+  overflow-y: hidden;
+}
+
 .semantic-content {
   -webkit-transform: translate(0, 100%);
   -moz-transform: translate(0, 100%);
