--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -14,10 +14,6 @@ body {
 	font: 16px/1.4 Helvetica Neue, sans-serif;
 	color: #111;
 	text-align: center;
-
-	&.has-overlay {
-		overflow: hidden;
-	}
 }
 
 h2 {
