--- a/scss/_modal.scss
+++ b/scss/_modal.scss
@@ -16,6 +16,15 @@ $modal-max-width: 650px;
 $modal-mobile-header: #27aae2;
 
 
+// Prevent overflow on HTML element
+html {
+	overflow-y: scroll;
+}
+
+.has-overlay > body {
+	overflow-y: hidden;
+}
+
 %modal {
 	// Hide initially
 	@include x-transform(translate(0, 100%));
